--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -3,7 +3,7 @@ name: PR Checks
 on:
   push:
     branches:
-      - main
+      - development
   pull_request:
     types: [opened, synchronize, reopened]
 
