--- a/Coco.xcodeproj/xcshareddata/xcschemes/CocoTests.xcscheme
+++ b/Coco.xcodeproj/xcshareddata/xcschemes/CocoTests.xcscheme
@@ -37,6 +37,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5B3D628E2DF16A6900552CCC"
+            BuildableName = "Coco.app"
+            BlueprintName = "Coco"
+            ReferencedContainer = "container:Coco.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -44,6 +54,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5B3D628E2DF16A6900552CCC"
+            BuildableName = "Coco.app"
+            BlueprintName = "Coco"
+            ReferencedContainer = "container:Coco.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
