--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -1,49 +1,63 @@
 name: PR Checks
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
+  on:
+    push:
+      branches:
+        - main
+    pull_request:
+      types: [opened, synchronize, reopened]
 
-jobs:
-  lint:
-    name: Run SwiftLint
-    runs-on: macos-14
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install SwiftLint
-        run: brew install swiftlint
-      - name: Run SwiftLint
-        run: swiftlint
+  jobs:
+    lint:
+      name: Run SwiftLint
+      runs-on: macos-14
+      steps:
+        - uses: actions/checkout@v4  # Updated to v4
+        - name: Install SwiftLint
+          run: brew install swiftlint
+        - name: Run SwiftLint
+          run: swiftlint
 
-  test:
-    name: Run Tests
-    needs: lint
-    runs-on: macos-14
-    steps:
-      - uses: actions/checkout@v3
-      
-      - uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '16.1'
-      
-      - name: Debug Environment
-        run: |
-          echo "Xcode path:"
-          xcode-select -p
-          echo "\nXcode version:"
-          xcodebuild -version
-      
-      - name: Run Tests
-        run: |
-          xcodebuild test \
-            -project Coco.xcodeproj \
-            -scheme Coco \
-            -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.4' \
-            -derivedDataPath Build/DerivedData \
-            ONLY_ACTIVE_ARCH=YES \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO
+    test:
+      name: Run Tests
+      needs: lint
+      runs-on: macos-14
+      steps:
+        - uses: actions/checkout@v4  # Updated to v4
+
+        - uses: maxim-lobanov/setup-xcode@v1
+          with:
+            xcode-version: '16.1'
+
+        - name: Debug Environment
+          run: |
+            echo "Xcode path:"
+            xcode-select -p
+            echo -e "\nXcode version:"
+            xcodebuild -version
+            echo -e "\nAvailable simulators:"
+            xcrun simctl list devices available iOS
+
+        - name: Build Project
+          run: |
+            xcodebuild build \
+              -project Coco.xcodeproj \
+              -scheme Coco \
+              -destination 'platform=iOS Simulator,name=iPhone 16' \
+              -derivedDataPath Build/DerivedData \
+              ONLY_ACTIVE_ARCH=YES \
+              CODE_SIGN_IDENTITY="" \
+              CODE_SIGNING_REQUIRED=NO \
+              CODE_SIGNING_ALLOWED=NO
+
+        - name: Run Tests
+          run: |
+            xcodebuild test \
+              -project Coco.xcodeproj \
+              -scheme Coco \
+              -destination 'platform=iOS Simulator,name=iPhone 16' \
+              -derivedDataPath Build/DerivedData \
+              ONLY_ACTIVE_ARCH=YES \
+              CODE_SIGN_IDENTITY="" \
+              CODE_SIGNING_REQUIRED=NO \
+              CODE_SIGNING_ALLOWED=NO
