Update Xcode version and iOS Simulator OS in CI

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -27,7 +27,7 @@ jobs:
       
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.1'
+          xcode-version: '16.4'
       
       - name: Debug Environment
         run: |
@@ -41,7 +41,7 @@ jobs:
           xcodebuild test \
             -project Coco.xcodeproj \
             -scheme Coco \
-            -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=latest' \
+            -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=18.5' \
             -derivedDataPath Build/DerivedData \
             ONLY_ACTIVE_ARCH=YES \
             CODE_SIGN_IDENTITY="" \
